[package]
name = "hanoidb"
version = "0.1.0"
edition = "2021"

[dependencies]
crc32fast = "1.4.2"
derive_more = { version = "1.0.0", features = ["is_variant"] }
fastbloom = { git = "https://github.com/tomtomwombat/fastbloom.git", features = [
    "serde",
], rev = "150433b" }
postcard = { version = "1.0.10", default-features = false, features = [
    "use-std",
] }
thiserror = "1.0.63"

[dev-dependencies]
tempfile = "3.13.0"
