[package]
name = "hanoidb"
version = "0.1.0"
edition = "2021"

[dependencies]
crc32fast = "1.4.2"
fastbloom = { git = "https://github.com/tomtomwombat/fastbloom.git", features = [
    "serde",
], rev = "150433b" }
flate2 = "1.0.35"
lz4_flex = "0.11.3"
postcard = { version = "1.0.10", default-features = false, features = [
    "use-std",
] }
snap = "1.1.1"
thiserror = "1.0.63"

[dev-dependencies]
tempfile = "3.13.0"
